# barcode-hub

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: README.md  deploy-latest.yaml  docker-image.yaml
barcode_hub/: __init__.py  asgi.py  build_info.json  build_info.py  config.py  decoder.py  errors.py  fetcher.py  formats.py  health.py  logging.py  media.py  metrics.py  models.py  serve.py  url_policy.py
scripts/: generate_contract.py
spec/: decode-result.schema.json  mcp.md  openapi.yaml
tests/: test_config.py  test_contracts.py  test_decoder.py  test_service.py
