[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barcode-hub"
version = "0.1.0"
description = "Barcode Hub service contract and implementation."
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
dependencies = [
    "anyio>=4.0",
    "fastapi>=0.128.0",
    "httpx>=0.27",
    "mcp>=1.12.4",
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "pillow>=10.0",
    "prometheus-client>=0.22",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.20",
    "PyYAML>=6.0",
    "uvicorn[standard]>=0.30",
    "zxing-cpp>=3.0.0",
]

[project.scripts]
barcode-hub = "barcode_hub.serve:main"

[project.optional-dependencies]
dev = [
    "jsonschema>=4.22",
    "openapi-spec-validator>=0.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.7",
]
contract = [
    "jsonschema>=4.22",
    "openapi-spec-validator>=0.7",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["barcode_hub*"]

[tool.setuptools.package-data]
barcode_hub = ["build_info.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
